Fix overlapping dropdown menu

--- a/UI-v2/css/style.css
+++ b/UI-v2/css/style.css
@@ -116,6 +116,7 @@ img {
 .dropdown--button {
   color: var(--gray80);
   border: none;
+  padding: 1rem;
 }
 
 .dropdown--button .fa {
@@ -130,7 +131,7 @@ img {
   box-shadow: 0px 4px 5px 1px rgba(97, 95, 95, 0.18);
   z-index: 2;
   border-radius: 3px;
-  margin-top: 4px;
+  margin-top: 2px;
   padding: 0.5rem 0.5rem;
   right: 0;
 }
